# pyfortunes

./: .gitignore  COPYING  README  README.rst  TODO  nginx.conf  parse.py  post-update  pyf-get  pyfd.conf.example  pyfortunes.service  pyproject.toml  server.py  setup.py
confs/: nginx.conf
confs/systemd/: pyfortunes.service  uwsgi-pyfortunes.service
confs/uwsgi/: pyfortunes.ini
contrib/: nginx.conf  post-update  pydtc.py
contrib/test/: 14873.html  test_pydtc.py
etc/: pyfd.conf
git-hooks/: post-update  pre-push
pyfortunes/: __init__.py  backend.py  client.py  config.py  db.py  pyfd.conf  server.py
pyfortunes/commands/: dtc.py  parse_db.py
pyfortunes/static/: style.css
pyfortunes/templates/: base.html  categories.html  fortune.html  index.html  search.html  search_results.html
templates/: categories.html  fortune.html  index.html  search.html  search_results.html
test/: test.py
upstart/: pyfd.conf
