[tool.poetry]
name = "pyfortunes"
version = "0.1.0"
description = "fortunes as a web serviec"
authors = ["Dimitri Merejkowsky <d.merej@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

# server
flask = "^1.1.1"
pyxdg = "^0.26"

# dtc client
beautifulsoup4 = "^4.8.2"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
pyf-dtc = "pyfortunes.commands.dtc:main"
pyf-parse = "pyfortunes.commands.parse_db:main"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
